# DDD-with-Boost

./: .gitignore  CMakeLists.txt  README.md  main.cpp
authentication/: CMakeLists.txt
tests/: first_test.cpp
thread/: CMakeLists.txt  manager.cpp  manager.h
ui/console/: CMakeLists.txt  ui_console.cpp  ui_console.h
user_input/: CMakeLists.txt  keyboard_input.cpp  keyboard_input.h
