set(THREAD_MANAGER_MODULE_NAME thread_manager)

set(THREAD_MANAGER_MODULE_SOURCES
    manager.cpp
)

set(THREAD_MANAGER_MODULE_HEADERS
    manager.h
)

add_library(${THREAD_MANAGER_MODULE_NAME} OBJECT ${THREAD_MANAGER_MODULE_SOURCES})

target_include_directories(${THREAD_MANAGER_MODULE_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
